--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -298,59 +298,60 @@
 
                               <div class="col-7" *ngIf="selectedFeature[i] === 'deployment_verification'" >
                                 <div>
-                                  <table class="table table-bordered">
-                                    <thead>
-                                    <tr>
-                                      <th>Deployment Verification Configuration</th>
-                                    </tr>
-                                    </thead>
-                                  </table>
-                                  <div class="form-group mb-3 pl-5 text-muted"  >
-                                    <label>Log Template</label>
-                                    <div class="d-flex  mr-5 align-items-center">
-                                      <select class="form-control" formControlName="logTemp">
-                                        <option value="" [disabled]="true">Select</option>
-                                        <option *ngFor="let logTemplate of logTemplateData" value="{{logTemplate.templateName}}">{{logTemplate.templateName}}</option>
-                                      </select>
-                                      <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Log Template" (click)="onEditTemplate(i,'log')">
-                                        <a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link" >
-                                          <i class="fas fa-pencil-alt"></i>
-                                        </a>
-                                      </span>
-                                      <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Template" (click)="onAddTemplate(i,'log')">
-                                        <a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link">
-                                          <i class="fas fa-plus"></i>
-                                        </a>
-                                      </span>
+                                  <form [formGroup]="deploymentVerificationForm">
+                                    <table class="table table-bordered">
+                                      <thead>
+                                      <tr>
+                                        <th>Deployment Verification Configuration</th>
+                                      </tr>
+                                      </thead>
+                                    </table>
+                                    <div class="form-group mb-3 pl-5 text-muted"  >
+                                      <label>Log Template</label>
+                                      <div class="d-flex  mr-5 align-items-center">
+                                        <select class="form-control" formControlName="logTemplate">
+                                          <option value="" [disabled]="true">Select</option>
+                                          <option *ngFor="let logTemplate of logTemplateList" value="{{logTemplate}}">{{logTemplate}}</option>
+                                        </select>
+                                        <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Log Template" (click)="onEditTemplate(i,'log')">
+                                          <a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link" >
+                                            <i class="fas fa-pencil-alt"></i>
+                                          </a>
+                                        </span>
+                                        <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Template" (click)="onAddTemplate(i,'log')">
+                                          <a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link">
+                                            <i class="fas fa-plus"></i>
+                                          </a>
+                                        </span>
+                                      </div>
                                     </div>
-                                  </div>
-                                  <div class="form-group mb-3 pl-5 text-muted">
-                                    <label>Metric Template</label>
-                                    <div class="d-flex  mr-5 align-items-center">
-                                      <select class="form-control" formControlName="metricTemp">
-                                        <option value="" [disabled]="true">Select</option>
-                                        <option *ngFor="let metricTemplate of metricTemplateData" value="{{metricTemplate.templateName}}">{{metricTemplate.templateName}}</option>
-                                      </select>
-                                      <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Metric Template" (click)="onEditTemplate(i,'metric')">
-                                        <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link">
-                                          <i class="fas fa-pencil-alt"></i>
-                                        </a>
-                                      </span>
-                                      <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Metric Template" (click)="onAddTemplate(i,'metric')" >
-                                        <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link" >
-                                          <i class="fas fa-plus"></i>
-                                        </a>
-                                      </span>
+                                    <div class="form-group mb-3 pl-5 text-muted">
+                                      <label>Metric Template</label>
+                                      <div class="d-flex  mr-5 align-items-center">
+                                        <select class="form-control" formControlName="metricTemplate">
+                                          <option value="" [disabled]="true">Select</option>
+                                          <option *ngFor="let metricTemplate of metricTemplateList" value="{{metricTemplate.templateName}}">{{metricTemplate.templateName}}</option>
+                                        </select>
+                                        <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Metric Template" (click)="onEditTemplate(i,'metric')">
+                                          <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link">
+                                            <i class="fas fa-pencil-alt"></i>
+                                          </a>
+                                        </span>
+                                        <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Metric Template" (click)="onAddTemplate(i,'metric')" >
+                                          <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link" >
+                                            <i class="fas fa-plus"></i>
+                                          </a>
+                                        </span>
+                                      </div>
                                     </div>
-                                  </div>
-                                  <div class="col-12 pull-right">
-                                    <div class="page_access text-right py-2 px-3">
-                                      <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
-                                      <button class="btn btn-primary ml-2" (click)="SubmitForm()">Save</button>
-                                      <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
-                                      <button class="btn btn-danger ml-1" (click)="cancelForm()">Delete</button>
+                                    <div class="col-12 pull-right">
+                                      <div class="page_access text-right py-2 px-3">
+                                        <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
+                                        <button class="btn btn-primary ml-2" (click)="saveDeploymentVerification()">Save</button>                                      
+                                        <button class="btn btn-danger ml-1" (click)="deleteDeploymentVerification()">Delete</button>
+                                      </div>
                                     </div>
-                                  </div>
+                                  </form>
                                 </div>
                               </div>
 
@@ -820,7 +821,7 @@
         </button>
       </div>
       <div class="modal-body p-0">
-        <app-log-template [isEditMode]="templateEditMode" [templateData]="editTemplateData" [templateIndex]="editTemplateIndex" [applicationId] = "applicationId"></app-log-template>
+        <app-log-template [isEditMode]="templateEditMode" [templateData]="editTemplateData" [templateIndex]="editTemplateIndex" [applicationId] = "applicationId" [applicationData]="savedApplicationData"></app-log-template>
       </div>
     </div>
   </div>
@@ -837,7 +838,7 @@
         </button>
       </div>
       <div class="modal-body p-0">
-        <app-metric-template [isEditMode]="templateEditMode" [templateData]="editTemplateData" [templateIndex]="editTemplateIndex" [metricTemplate]="isMetricTemplateClicked"></app-metric-template>
+        <app-metric-template [isEditMode]="templateEditMode" [templateData]="editTemplateData" [templateIndex]="editTemplateIndex" [metricTemplate]="isMetricTemplateClicked" [applicationData]="savedApplicationData"></app-metric-template>
       </div>
     </div>
   </div>
