--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -157,10 +157,6 @@
               <div class="col-12" *ngIf="showServiceForm" >
                 <form [formGroup]="servicesForm">
                   <div class="form-group service_section">
-                    <label>Services</label>
-                   
-                    <!-- /.d-flex -->
-  
                     <div class="col-12" formArrayName="services">
                       <div class="row" *ngFor="let serviceArr of servicesForm.get('services')['controls']; let i=index">
                         <div class="col-12 padding0" [formGroupName]="i" *ngIf="this.servicesForm.value.services.length == i+1 || editMode">                          
@@ -302,7 +298,7 @@
                                     <table class="table table-bordered">
                                       <thead>
                                       <tr>
-                                        <th>Deployment Verification Configuration</th>
+                                        <th>Deployment Verification Configuration <i data-toggle="tooltip" data-placement="top" data-original-title="Continuous verification of the software image for risks" class="fa fa-question-circle" aria-hidden="true"></i></th>
                                       </tr>
                                       </thead>
                                     </table>
@@ -367,7 +363,7 @@
                                   </table>
                                   <div class="form-group mb-3 pl-1 text-muted">
                                     <form [formGroup]="gateForm">
-                                    <label>Approval Gate <i data-toggle="tooltip" data-placement="top" data-original-title="Approval gate" class="fa fa-question-circle" aria-hidden="true"></i></label>
+                                    <label>Approval Gate <i data-toggle="tooltip" data-placement="top" data-original-title="Visibility during delivery to make informed Approvals" class="fa fa-question-circle" aria-hidden="true"></i></label>
                                     <div class="d-flex  mr-2 align-items-center">
                                       <input type="text" class="form-control input_len" formControlName="gateName">
                                       <!-- <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Update gate name">
@@ -486,9 +482,9 @@
                                           <table class="table table-outline" formArrayName="visibilityConfig">
                                             <thead>
                                               <tr>
-                                                <th>Connector <i data-toggle="tooltip" data-placement="top" data-original-title="Connector" class="fa fa-question-circle" aria-hidden="true"></i></th>
-                                                <th>Account <i data-toggle="tooltip" data-placement="top" data-original-title="Account" class="fa fa-question-circle" aria-hidden="true"></i></th>
-                                                <th>Template <i data-toggle="tooltip" data-placement="top" data-original-title="Template" class="fa fa-question-circle" aria-hidden="true"></i></th>
+                                                <th>Connector <i data-toggle="tooltip" data-placement="top" data-original-title="Tool to gather information for informed Approvals" class="fa fa-question-circle" aria-hidden="true"></i></th>
+                                                <th>Account <i data-toggle="tooltip" data-placement="top" data-original-title="Account name of the connector" class="fa fa-question-circle" aria-hidden="true"></i></th>
+                                                <th>Template <i data-toggle="tooltip" data-placement="top" data-original-title="Define the specific fields of interest from connector" class="fa fa-question-circle" aria-hidden="true"></i></th>
                                                 <th class="text-right" *ngIf="addNewConnectorAllowed && !hideVisibilityPlusIcon"><a (click)="addNewConnector()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Connector"><i class="fas fa-plus"></i></a></th>
                                               </tr>
                                             </thead>
@@ -579,7 +575,7 @@
                                       <div class="col-12 pull-right" *ngIf = "gateId != '' && gateId != null && gateId != undefined ">
                                         <div class="page_access text-right py-2 px-3">                                          
                                           <!-- <button class="btn btn-primary ml-2" (click)="SubmitVisibilityForm()">Save</button> -->
-                                          <button class="btn btn-danger ml-1" (click)="deleteVisibilityFeature()">Delete</button>
+                                          <button class="btn btn-danger ml-1" (click)="deleteVisibilityFeature()" data-toggle="tooltip" data-placement="top" title="Disable and remove the feature for this service">Delete</button>
                                         </div>
                                       </div>
                                       
@@ -631,7 +627,7 @@
               <!-- /.col-8 -->
               <div class="col-8" *ngIf="showEnvironmentForm">
                 <div class="form-group group_permission">
-                  <label>Environments <i data-toggle="tooltip" data-placement="top" data-original-title="Enviornments" class="fa fa-question-circle" aria-hidden="true"></i></label>
+                  <label>Environments <i data-toggle="tooltip" data-placement="top" data-original-title="Environmental values for the CICD pipeline" class="fa fa-question-circle" aria-hidden="true"></i></label>
                   <!-- <div class="col-8">
                     <hr class="ml-0 mt-3 mb-3" />
                   </div> -->
@@ -698,7 +694,7 @@
              
               <div  class="col-lg-8 col-12 col-xl-6" *ngIf="showPermissionForm">
                 <div class="form-group group_permission">
-                  <label>Group Permissions <i data-toggle="tooltip" data-placement="top" data-original-title="Group permissions" class="fa fa-question-circle" aria-hidden="true"></i></label>
+                  <label>Group Permissions <i data-toggle="tooltip" data-placement="top" data-original-title="Authorisation definition for this application" class="fa fa-question-circle" aria-hidden="true"></i></label>
                   <!-- <div class="col-12">
                     <hr class="ml-0 mt-3 mb-3" />
                   </div> -->
