--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -35,8 +35,8 @@
               <ng-container *ngFor="let serviceArr of servicesForm.getRawValue().services; let i = index">
               <li class="ti-item">
                 <i class="{{serviceArr.serviceName !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
-                <span>Service name</span>
-                <strong>{{serviceArr.serviceName}}</strong>
+                <span *ngIf="!editMode">Service name</span>
+                <strong (click)="editServiceClick(serviceArr)">{{serviceArr.serviceName}}</strong>
               </li>
             </ng-container>
               <br>
@@ -165,7 +165,7 @@
                             <div class="d-flex  mr-4 align-items-center">
                               <input type="text" class="form-control input_len" formControlName="serviceName" 
                               [ngClass]="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched ? 'is-invalid':''">
-                              <button class="btn btn-primary ml-4" type="submit" (click)="saveServiceForm(i)" >Save</button>
+                              <button *ngIf="!editMode" class="btn btn-primary ml-4" type="submit" (click)="saveServiceForm(i)" >Save</button>
                               <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
                               <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                               <a class="text-muted ml-3 formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete Service" 
