--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -58,7 +58,7 @@
 	position: absolute;
 	background: #fff;
 	font-size: 14px;
-	color: #ececec;
+	color: #2294ca;
 	left: -8px;
 	z-index: 1;
 	top: 5px;
@@ -75,7 +75,7 @@
 	border-color: #b9b9b9;
 }
 .tree-active li > i{
-	color: #b9b9b9;
+	color: #28a745;
 }
 .bottom-strp-cover{
 	margin-left: -31px;
