--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -293,6 +293,15 @@
               </mat-step>
               <mat-step [stepControl]="logTopicsForm">
                 <form [formGroup]="logTopicsForm">
+                  <div class="form-group mb-3 pl-5 text-muted" *ngIf = "scoringAlgoData != null " >  
+                    <label>Scoring Algorithm</label>
+                    <div class="d-flex  mr-5 align-items-center col-4">
+                      <select class="form-control" formControlName="selectScoreAlgo"  >
+                        <option value="" [disabled]="true">Select</option>
+                        <option *ngFor="let scoringAlgo of scoringAlgoData.algorithms" value="{{scoringAlgo}}">{{scoringAlgo}}</option>
+                      </select>
+                     </div>
+                  </div>
                   <ng-template matStepLabel>Log Tags</ng-template>
                   <div id="step-2">
                     <div class="multisteps-form__content">                          
@@ -303,7 +312,7 @@
                           </div>
                         </div>
 
-                        <div class="row d-flex align-items-center mb-4">
+                        <div class="pl-5 row d-flex align-items-center mb-4">
                           <div class="form-group block widthfull">
                             <div class="custom-control custom-checkbox">
                               <input type="checkbox" class="custom-control-input"  id="enableClusterTags"  formControlName="enableClusterTags" (change)="onClusterChange($event.target.checked)"  >
@@ -334,6 +343,7 @@
 
                               
                         </div>
+
                         <div class="inlineFlex dropDownWidth mr-5 align-items-center" >
                           <input type="text" formControlName="inputTags" *ngIf = "addTagInput || editTagInput">
                           <span class="ml-10"><button (click)="submitNewTag()" *ngIf = "addTagInput " class="btn btn-primary">Add Tags</button></span>
