Display of tool connectors in edit mode

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -3,6 +3,7 @@
         cursor: pointer;
     }
     .sidebar_nav{
+        color: #eee;
         .oesdashboard{
             background-position: 0 0;
         }
