--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -545,7 +545,7 @@
                                                     class="invalid-feedback">connectorType is required</span> -->
                                                   </td>
                                                   <td>                                                    
-                                                    Account type: {{accountsForTooltypes | json}}
+                                                    <!-- Account type: {{accountsForTooltypes | json}} -->
                                                     <select class="form-control" formControlName="accountName" (change)="onChangeAccountofTooltype($event.target.value)">
                                                       <option value="" [disabled]="true">Select</option>                                                       
                                                       <option *ngFor="let account of accountsForTooltypes[i]" value="{{account.visibilityToolConnectorId}}" >
@@ -554,11 +554,12 @@
                                                     <!-- <span>{{optionsArr.controls.accountName.value}}</span>                                                 -->
                                                   </td>
                                                   <td>
+                                                    <!-- Template Tool type: {{templatesForToolType | json}} -->
                                                     <div class="d-flex  mr-2 align-items-center position-relative">                                                      
                                                       <select class="form-control template-dropdown" formControlName="templateName" (change)="onChangeTemplateofTooltype($event.target.value, i)">
                                                         <option value="" [disabled]="true">Select</option>                                                       
-                                                        <option *ngFor="let template of templatesForToolType[i]" value="{{template.id}}" >
-                                                            {{template.name}}</option>
+
+                                                        <option *ngFor="let template of templatesForToolType[i]" value="2" > {{template.name}}</option>
                                                         <option value="+">+ Add Template</option>   
                                                       </select>
                                                       <span class="ml-2 editTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Template" *ngIf="templateId[i]" (click)="editTemplate(i)">
