--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
             <ng-template [ngIf]="SideMenu.subMenu.length === 0 ?false:true">
               <ul class="subnav list-unstyled m-0" *ngFor = "let submenu of SideMenu.subMenu">
                 <li class="{{submenu.disabled === true? 'disabled_menu': disabledLink(submenu.name)}} {{activeRoutes(submenu.link)}}" routerLink="{{submenu.link}}" (click)="navigateMenu($event,submenu.name)"><a>
-                  <i class="icon {{subMenuclass(submenu.link)}}" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link != 'visibility' && submenu.link != '/application/trendanalysis'"></i> 
+                  <i class="icon {{subMenuclass(submenu.link)}}" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link != '/application/visibility' && submenu.link != '/application/trendanalysis'"></i> 
                   <i class="fa fa-line-chart" aria-hidden="true" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link === '/application/trendanalysis'"></i>
-                  <i class="fa fa-eye" aria-hidden="true" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link === 'visibility'"></i>
+                  <i class="fa fa-eye" aria-hidden="true" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link === '/application/visibility'"></i>
                   <!-- <i class="{{subMenuclass(submenu.link)}}"></i>  -->
                   <span>{{submenu.name}}</span></a></li>
               </ul>
