--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -24,16 +24,15 @@
     <div class="col-sm-8">
       <div class="data_listArea">
         <ng-container *ngFor="let application of applicationFinalData; let i=index">
-          <div class="data_list" (click)="selectedApplication(i,application, finalLabelArray[i])"
-      >
+          <div *ngIf="application" class="data_list" (click)="selectedApplication(i,application, finalLabelArray[i])">
                         
                         <div class="data_list_header d-flex align-items-center">
               <div class="data_list_title">
-                <h3>{{application.applicationName}} &nbsp;&nbsp;
-                  <span *ngIf="application.activeCount > 0 "> 
-                    <a  [routerLink]="['/application/visibility',application.applicationName,application.applicationId]"  class="badge badge-info">View <i class="fa fa-eye" aria-hidden="true"></i></a></span>
+                <h3>{{ application && application.applicationName ? application.applicationName: ''}} &nbsp;&nbsp;
+                  <span *ngIf="application && application.activeCount > 0 "> 
+                    <a  [routerLink]="['/application/visibility',application.applicationName,application.applicationId]"  class="btn p-0 popover-hover"  data-toggle="tooltip" data-placement="top" title="Active gates : {{application.activeCount}}"> <i class="fa fa-eye" aria-hidden="true"></i></a></span>
                 </h3> 
-                <span class="datetime">{{application.date | date:'medium'}} </span>
+                <span class="datetime">{{application && application.date | date:'medium'}} </span>
               </div>
               <!-- /.data_list_title -->
               <div class="data_list_actionsc d-flex align-items-center ml-auto">
