--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -381,3 +381,9 @@ p {
 ::ng-deep .template-editor .ace_editor.ace-jsoneditor {
 	min-height: 300px !important;
 }
+.imageSourceLabel{
+	cursor: pointer !important;
+	color: #2294ca;
+	text-decoration: underline;
+}
+
