--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -273,7 +273,7 @@
                                       <br><br>
                                 </div>
                                     <div class="col-12 " [formGroupName]="j">
-                                      <div class="form-group mb-3 pl-5 text-muted">
+                                      <div class="form-group mb-3 text-muted">
                                         <label>Select Service Pipeline</label>
                                         <div class="d-flex  mr-5 align-items-center">
                                           <select class="form-control" formControlName="pipelinetemplate" (change)="onPipelineSelect(i,j,$event.target.value)"
@@ -286,7 +286,7 @@
                                         <span *ngIf="!pipelineArr.get('pipelinetemplate').valid && pipelineArr.get('pipelinetemplate').touched"
                                         class="help-block">Pipeline is required</span>
                                       </div>
-                                      <div class="form-group mb-3 pl-5 text-muted" formGroupName="dockerImageName">
+                                      <div class="form-group mb-3 text-muted" formGroupName="dockerImageName">
                                         <label>Docker Account & Image Name</label>
                                         <div class="d-flex  mr-5 align-items-center">
                                             <div class="col-5 dockerImageSource">
@@ -307,10 +307,10 @@
                                         <span *ngIf="!pipelineArr.get('dockerImageName.imageName').valid && pipelineArr.get('dockerImageName.imageName').touched"
                                         class="help-block">Docker Image Name is required</span>
                                       </div>
-                                      <div class="col-12 " formArrayName="pipelineParameters">
+                                      <div class="col-12 padding0" formArrayName="pipelineParameters">
                                         <div class="row" *ngFor="let pipelineParameterArr of pipelineArr.get('pipelineParameters')['controls']; let k=index">
                                           <div class="col-12 " [formGroupName]="k">
-                                            <div class="form-group mb-3 pl-6 text-muted">
+                                            <div class="form-group mb-3 pl-3 text-muted">
                                               <label>{{pipelineParameterArr.get('name').value}}</label>
                                               <div class="d-flex mr-6 align-items-center">
                                                 <input *ngIf = "pipelineParameterArr.get('type').value !== 'boolean'" type="{{pipelineParameterArr.get('type').value === 'string'? 'text' : 'number'}}" 
@@ -353,14 +353,14 @@
                                       </tr>
                                       </thead>
                                     </table>
-                                    <div class="form-group mb-3 pl-5 text-muted"  >
+                                    <div class="form-group mb-3 text-muted"  >
                                       <label>Log Template</label>
                                       <div class="d-flex  mr-5 align-items-center">
                                         <select class="form-control" formControlName="logTemplate">
                                           <option value="" [disabled]="true">Select</option>
                                           <option *ngFor="let logTemplate of logTemplateList" value="{{logTemplate}}">{{logTemplate}}</option>
                                         </select>
-                                        <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Log Template" (click)="onEditLogMetricTemplateClick('log')">
+                                        <span *ngIf="logTemplateList?.length > 0" class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Log Template" (click)="onEditLogMetricTemplateClick('log')">
                                           <a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link" >
                                             <i class="fas fa-pencil-alt"></i>
                                           </a>
@@ -372,14 +372,14 @@
                                         </span>
                                       </div>
                                     </div>
-                                    <div class="form-group mb-3 pl-5 text-muted">
+                                    <div class="form-group mb-3 text-muted">
                                       <label>Metric Template</label>
                                       <div class="d-flex  mr-5 align-items-center">
                                         <select class="form-control" formControlName="metricTemplate">
                                           <option value="" [disabled]="true">Select</option>
                                           <option *ngFor="let metricTemplate of metricTemplateList" value="{{metricTemplate}}">{{metricTemplate}}</option>
                                         </select>
-                                        <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Metric Template" (click)="onEditLogMetricTemplateClick('metric')">
+                                        <span *ngIf="metricTemplateList?.length > 0" class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Metric Template" (click)="onEditLogMetricTemplateClick('metric')">
                                           <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link">
                                             <i class="fas fa-pencil-alt"></i>
                                           </a>
@@ -394,8 +394,9 @@
                                     <div class="col-12 pull-right">
                                       <div class="page_access text-right py-2 px-3">
                                         <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
-                                        <button class="btn btn-primary ml-2" (click)="saveDeploymentVerification()">Save</button>                                      
-                                        <button class="btn btn-danger ml-1" (click)="deleteDeploymentVerification()" *ngIf="deploymentVerificationFeatureSaved">Delete</button>
+                                        <button class="btn btn-primary ml-2" (click)="saveDeploymentVerification()" *ngIf="deploymentVerificationForm.value.metricTemplate != '' || deploymentVerificationForm.value.logTemplate != ''" >Save</button>                                      
+                                        <button class="btn btn-danger ml-1" (click)="deleteDeploymentVerification()" *ngIf="!editMode && deploymentVerificationFeatureSaved">Delete</button>
+                                        <button class="btn btn-danger ml-1" (click)="deleteDeploymentVerification()" *ngIf="editMode && isFeaturePresent[serviceId] && isFeaturePresent[serviceId]['deployment_verification']">Delete</button>
                                       </div>
                                     </div>
                                   </form>
